[RP][ja_JP.lang]Translate compressed block section

--- a/Lots More Food Addon/MoreFoodRP/texts/ja_JP.lang
+++ b/Lots More Food Addon/MoreFoodRP/texts/ja_JP.lang
@@ -17,56 +17,56 @@ entity.exotic_trader.name=エキゾチックなトレーダー
 entity.wandering_trader.name=More Foodのトレーダー
 
 # compressed blocks
-tile.block_apple.name=Apple Block (#morefood)
-tile.block_banana.name=Banana Block (#morefood)
-tile.block_golden_apple.name=Golden Apple Block (#morefood)
-tile.block_grape.name=Grape Block (#morefood)
-tile.block_hops.name=Hops Block (#morefood)
-tile.block_lemon.name=Lemon Block (#morefood)
-tile.block_olives.name=Olives Block (#morefood)
-tile.block_orange.name=Orange Block (#morefood)
-tile.block_plum.name=Plum Block (#morefood)
-tile.block_raspberry.name=Raspberry Block (#morefood)
-tile.block_strawberry.name=Strawberry Block (#morefood)
-tile.block_baked_potato.name=Baked Potato Block (#morefood)
-tile.block_carrots.name=Carrots Block (#morefood)
-tile.block_potato.name=Potato Block (#morefood)
-tile.block_cookie.name=Cookie Block (#morefood)
-tile.block_dark_chocolate.name=Dark Chocolate Block (#morefood)
-tile.block_milk_chocolate.name=Milk Chocolate Block (#morefood)
-tile.block_white_chocolate.name=White Chocolate Block (#morefood)
-tile.block_cooked_beef.name=Cooked Beef Block (#morefood)
-tile.block_cooked_chicken.name=Cooked Chicken Block (#morefood)
-tile.block_cooked_mutton.name=Cooked Mutton Block (#morefood)
-tile.block_cooked_rabbit.name=Cooked Rabbit Block (#morefood)
-tile.block_cooked_squid.name=Cooked Squid Block (#morefood)
-tile.block_raw_beef.name=Raw Beef Block (#morefood)
-tile.block_raw_chicken.name=Raw Chicken Block (#morefood)
-tile.block_raw_mutton.name=Raw Mutton Block (#morefood)
-tile.block_raw_rabbit.name=Raw Rabbit Block (#morefood)
-tile.block_raw_squid.name=Raw Squid Block (#morefood)
-tile.bush_barley.name=Barley Bush (#morefood)
-tile.bush_coffee.name=Coffee Bush (#morefood)
-tile.bush_corn.name=Corn Bush (#morefood)
-tile.bush_gherkin.name=Gherkin Bush (#morefood)
-tile.bush_grape.name=Grape Bush (#morefood)
-tile.bush_hops.name=Hops Bush (#morefood)
-tile.bush_lettuce.name=Lettuce Bush (#morefood)
-tile.bush_onion.name=Onion Bush (#morefood)
-tile.bush_raspberry.name=Raspberry Bush (#morefood)
-tile.bush_rice.name=Rice Bush (#morefood)
-tile.bush_strawberry.name=Strawberry Bush (#morefood)
-tile.bush_tea.name=Tea Bush (#morefood)
-tile.bush_tomato.name=Tomato Bush (#morefood)
-tile.bush_vanilla.name=Vanilla Bush (#morefood)
-tile.bush_pepper.name=Pepper Bush (#morefood)
-tile.tree_apple.name=Apple Tree Leaves (#morefood)
-tile.tree_banana.name=Banana Tree Leaves (#morefood)
-tile.tree_coconut.name=Coconut Tree Leaves (#morefood)
-tile.tree_lemon.name=Lemon Tree Leaves (#morefood)
-tile.tree_olive.name=Olive Tree Leaves (#morefood)
-tile.tree_orange.name=Orange Tree Leaves (#morefood)
-tile.tree_plum.name=Plum Tree Leaves (#morefood)
+tile.block_apple.name=リンゴブロック (#morefood)
+tile.block_banana.name=バナナブロック (#morefood)
+tile.block_golden_apple.name=金リンゴブロック (#morefood)
+tile.block_grape.name=グレープブロック (#morefood)
+tile.block_hops.name=ホップブロック (#morefood)
+tile.block_lemon.name=レモンブロック (#morefood)
+tile.block_olives.name=オリーブブロック (#morefood)
+tile.block_orange.name=オレンジブロック (#morefood)
+tile.block_plum.name=プラムブロック (#morefood)
+tile.block_raspberry.name=ラズベリーブロック (#morefood)
+tile.block_strawberry.name=ストロベリーブロック (#morefood)
+tile.block_baked_potato.name=焼きポテトブロック (#morefood)
+tile.block_carrots.name=ニンジンブロック (#morefood)
+tile.block_potato.name=じゃがいもブロック (#morefood)
+tile.block_cookie.name=クッキーブロック (#morefood)
+tile.block_dark_chocolate.name=ダークチョコレートブロック (#morefood)
+tile.block_milk_chocolate.name=ミルクチョコレートブロック (#morefood)
+tile.block_white_chocolate.name=ホワイトチョコレートブロック (#morefood)
+tile.block_cooked_beef.name=調理した牛肉ブロック (#morefood)
+tile.block_cooked_chicken.name=調理した鶏肉ブロック (#morefood)
+tile.block_cooked_mutton.name=調理した羊肉ブロック (#morefood)
+tile.block_cooked_rabbit.name=調理した兎肉ブロック (#morefood)
+tile.block_cooked_squid.name=調理したイカブロック (#morefood)
+tile.block_raw_beef.name=生の牛肉ブロック (#morefood)
+tile.block_raw_chicken.name=生の鶏肉ブロック (#morefood)
+tile.block_raw_mutton.name=生の羊肉ブロック (#morefood)
+tile.block_raw_rabbit.name=生の兎肉ブロック (#morefood)
+tile.block_raw_squid.name=生のイカブロック (#morefood)
+tile.bush_barley.name=大麦 (#morefood)
+tile.bush_coffee.name=コーヒー (#morefood)
+tile.bush_corn.name=コーン (#morefood)
+tile.bush_gherkin.name=ミニキュウリ (#morefood)
+tile.bush_grape.name=グレープ (#morefood)
+tile.bush_hops.name=ホップ (#morefood)
+tile.bush_lettuce.name=レタス (#morefood)
+tile.bush_onion.name=たまねぎ (#morefood)
+tile.bush_raspberry.name=ラズベリー (#morefood)
+tile.bush_rice.name=稲 (#morefood)
+tile.bush_strawberry.name=イチゴ (#morefood)
+tile.bush_tea.name=茶 (#morefood)
+tile.bush_tomato.name=トマト (#morefood)
+tile.bush_vanilla.name=バニラ (#morefood)
+tile.bush_pepper.name=コショウ (#morefood)
+tile.tree_apple.name=リンゴの木の葉 (#morefood)
+tile.tree_banana.name=バナナの木の葉 (#morefood)
+tile.tree_coconut.name=ココナッツの木の葉 (#morefood)
+tile.tree_lemon.name=レモンの葉 (#morefood)
+tile.tree_olive.name=オリーブの木の葉 (#morefood)
+tile.tree_orange.name=オレンジの木の葉 (#morefood)
+tile.tree_plum.name=プラムの木の葉 (#morefood)
 
 # Food
 item.cooked_chicken_piece.name=Cooked Chicken Piece (#morefood)
