[RP][ja_JP.lang]Translate 'Food' section

--- a/Lots More Food Addon/MoreFoodRP/texts/ja_JP.lang
+++ b/Lots More Food Addon/MoreFoodRP/texts/ja_JP.lang
@@ -69,131 +69,131 @@ tile.tree_orange.name=オレンジの木の葉 (#morefood)
 tile.tree_plum.name=プラムの木の葉 (#morefood)
 
 # Food
-item.cooked_chicken_piece.name=Cooked Chicken Piece (#morefood)
-item.cooked_wedges.name=Cooked Wedges (#morefood)
-item.pepper.name=Pepper (#morefood)
-item.sparkling_water_bottle.name=Sparkling Water Bottle (#morefood)
-item.chicken_nugget.name=Chicken Nugget (#morefood)
-item.cooked_chicken_nugget.name=Cooked Chicken Nugget (#morefood)
-item.netherite_apple.name=Netherite Apple (#morefood)
-item.cooked_hoglin_meat.name=Cooked Hoglin Meat (#morefood)
-item.hoglin_meat.name=Hoglin Meat (#morefood)
-item.fungus_stew.name=Fungus Stew (#morefood)
-item.nether_cookie.name=Nether Cookie (#morefood)
-item.netherwart_chicken_soup.name=Netherwart Chicken Soup (#morefood)
-item.netherwart_mushroom_soup.name=Netherwart Mushroom Soup (#morefood)
-item.shroomlight_slices.name=Shroomlight Slices (#morefood)
-item.warped_berries.name=Warped Berries (#morefood)
-item.wart_pie.name=Wart Pie (#morefood)
-item.rotten_porkchop.name=Rotten Porkchop (#morefood)
-item.redwhiteblue_cake.name=Red White Blue Cake (#morefood)
-item.rainbow_cake.name=Rainbow Cake (#morefood)
-item.chocolate_cake.name=Chocolate Cake (#morefood)
-item.ketchup.name=Tomato Ketchup (#morefood)
-item.spaghetti.name=Spaghetti (#morefood)
-item.sashimi.name=Sashimi (#morefood)
-item.onigiri.name=Onigiri (#morefood)
-item.americano.name=Americano (#morefood)
-item.bacon.name=Bacon (#morefood)
-item.bacon_egg_muffin.name=Bacon Egg Muffin (#morefood)
-item.bacon_egg_sandwich.name=Bacon Egg Sandwich (#morefood)
-item.bat_meat.name=Bat Meat (#morefood)
-item.beef_sub.name=Beef Sub (#morefood)
-item.blue_cupcake.name=Blue Cupcake (#morefood)
-item.bread_loaf.name=Bread Loaf (#morefood)
-item.breakfast_sub.name=Breakfast Sub (#morefood)
-item.burger_bun.name=Burger Bun (#morefood)
-item.burrito.name=Burrito (#morefood)
-item.butter.name=Butter (#morefood)
-item.cappuccino.name=Cappuccino (#morefood)
-item.cereal.name=Cereal (#morefood)
-item.cheese_bucket.name=Cheese Bucket (#morefood)
-item.cheese_toastie.name=Cheese Toastie (#morefood)
-item.cheese_wedge.name=Cheese Wedge (#morefood)
-item.chicken_fajita.name=Chicken Fajita (#morefood)
-item.chicken_select.name=Chicken Select (#morefood)
-item.chicken_sub.name=Chicken Sub (#morefood)
-item.coconut_meat.name=Coconut Meat (#morefood)
-item.coconut_milk.name=Coconut Milk (#morefood)
-item.cooked_bacon.name=Cooked Bacon (#morefood)
-item.cooked_bat_meat.name=Cooked Bat Meat (#morefood)
-item.cooked_hotdog_sausage.name=Cooked Hotdog Sausage (#morefood)
-item.cooked_sausage.name=Cooked Sausage (#morefood)
-item.cornflour.name=Cornflour (#morefood)
-item.cream_carton.name=Cream Carton (#morefood)
-item.custard.name=Custard (#morefood)
-item.cut_bread.name=Cut Bread (#morefood)
-item.cut_fries.name=Cut Fries (#morefood)
-item.dark_chocolate.name=Dark Chocolate (#morefood)
-item.dough.name=Dough (#morefood)
-item.flour.name=Flour (#morefood)
-item.fried_egg.name=Fried Egg (#morefood)
-item.fried_squid.name=Fried Squid (#morefood)
-item.fries.name=Fries (#morefood)
-item.gelatin.name=Gelatin (#morefood)
-item.hamburger.name=Hamburger (#morefood)
-item.hamburger_patty.name=Hamburger Patty (#morefood)
-item.hops.name=Hops (#morefood)
-item.hot_cocoa.name=Hot Cocoa (#morefood)
-item.hot_coffee.name=Hot Coffee (#morefood)
-item.hot_tea.name=Hot Tea (#morefood)
-item.hotdog.name=Hotdog (#morefood)
-item.hotdog_bun.name=Hotdog Bun (#morefood)
-item.hotdog_sausage.name=Hotdog Sausage (#morefood)
-item.ice_bowl.name=Ice Bowl (#morefood)
-item.jam.name=Jam (#morefood)
-item.jelly_sandwich.name=Jelly Sandwich (#morefood)
-item.kebab.name=Kebab (#morefood)
-item.macchiato.name=Macchiato (#morefood)
-item.milk_carton.name=Milk Carton (#morefood)
-item.milk_chocolate.name=Milk Chocolate (#morefood)
-item.mocha.name=Mocha (#morefood)
-item.muffin_bun.name=Muffin Bun (#morefood)
-item.noodles.name=Noodles (#morefood)
-item.oil.name=Oil (#morefood)
-item.orange_jelly.name=Orange_jelly (#morefood)
-item.pancakes.name=Pancakes (#morefood)
-item.pasta.name=Pasta (#morefood)
-item.pink_cupcake.name=Pink Cupcake (#morefood)
-item.pitta_bread.name=Pitta Bread (#morefood)
-item.pizza.name=Pizza (#morefood)
-item.pizza_base.name=Pizza Base (#morefood)
-item.pizza_slice.name=Pizza Slice (#morefood)
-item.popcorn.name=Popcorn (#morefood)
-item.popcorn_bucket.name=Popcorn Bucket (#morefood)
-item.ramen_noodles.name=Ramen Noodles (#morefood)
-item.raw_hamburger_patty.name=Raw Hamburger Patty (#morefood)
-item.raw_sausage.name=Raw Sausage (#morefood)
-item.raw_squid.name=Raw Squid (#morefood)
-item.raw_veganburger_patty.name=Raw Veganburger Patty (#morefood)
-item.raw_wedges.name=Raw Wedges (#morefood)
-item.rice.name=Rice (#morefood)
-item.rice_pudding.name=Rice Pudding (#morefood)
-item.round_cheese.name=Round Cheese (#morefood)
-item.salt.name=Salt (#morefood)
-item.sausage_egg_muffin.name=Sausage Egg Muffin (#morefood)
-item.sausage_egg_sandwich.name=Sausage Egg Sandwich (#morefood)
-item.sparkling_water_bucket.name=Sparkling Water Bucket (#morefood)
-item.strawberry_jelly.name=Strawberry Jelly (#morefood)
-item.sub_bun.name=Sub Bun (#morefood)
-item.sushi.name=Sushi (#morefood)
-item.taco.name=Taco (#morefood)
-item.tea_leaves.name=Tea Leaves (#morefood)
-item.toast.name=Toast (#morefood)
-item.toffee.name=Toffee (#morefood)
-item.toffee_latte.name=Toffee Latte (#morefood)
-item.tomato_puree.name=Tomato Puree (#morefood)
-item.tortilla.name=Tortilla (#morefood)
-item.turkish_delight.name=Turkish Delight (#morefood)
-item.vanilla_extract.name=Vanilla Extract (#morefood)
-item.vanilla_latte.name=Vanilla Latte (#morefood)
-item.vanilla_pod.name=Vanilla Pod (#morefood)
-item.veganburger.name=Veganburger (#morefood)
-item.veganburger_patty.name=Veganburger Patty (#morefood)
-item.waffle.name=Waffle (#morefood)
-item.wedges_pot.name=Wedges Pot (#morefood)
-item.white_chocolate.name=White Chocolate (#morefood)
-item.yeast.name=Yeast (#morefood)
+item.cooked_chicken_piece.name=調理した鶏肉の切り身 (#morefood)
+item.cooked_wedges.name=調理したウェッジ (#morefood)
+item.pepper.name=コショウ (#morefood)
+item.sparkling_water_bottle.name=炭酸水ボトル (#morefood)
+item.chicken_nugget.name=チキンナゲット (#morefood)
+item.cooked_chicken_nugget.name=調理したチキンナゲット (#morefood)
+item.netherite_apple.name=ネザライトのリンゴ (#morefood)
+item.cooked_hoglin_meat.name=調理したHoglinの肉 (#morefood)
+item.hoglin_meat.name=ホグリンの肉 (#morefood)
+item.fungus_stew.name=キノコシチュー (#morefood)
+item.nether_cookie.name=暗黒界のクッキー (#morefood)
+item.netherwart_chicken_soup.name=暗黒界ウォートの鶏肉のスープ (#morefood)
+item.netherwart_mushroom_soup.name=暗黒界ウォートのキノコスープ (#morefood)
+item.shroomlight_slices.name=カットしたきのこライト (#morefood)
+item.warped_berries.name=ゆがんだベリー (#morefood)
+item.wart_pie.name=ウォートパイ (#morefood)
+item.rotten_porkchop.name=腐ったポークチョップ (#morefood)
+item.redwhiteblue_cake.name=三色ケーキ (#morefood)
+item.rainbow_cake.name=レインボーケーキ (#morefood)
+item.chocolate_cake.name=チョコレートケーキ (#morefood)
+item.ketchup.name=トマトケチャップ (#morefood)
+item.spaghetti.name=スパゲッティ (#morefood)
+item.sashimi.name=刺身 (#morefood)
+item.onigiri.name=おにぎり (#morefood)
+item.americano.name=アメリカーノ (#morefood)
+item.bacon.name=ベーコン (#morefood)
+item.bacon_egg_muffin.name=ベーコンエッグマフィン (#morefood)
+item.bacon_egg_sandwich.name=ベーコンエッグサンドイッチ (#morefood)
+item.bat_meat.name=コウモリ肉 (#morefood)
+item.beef_sub.name=ビーフサブ (#morefood)
+item.blue_cupcake.name=青いカップケーキ (#morefood)
+item.bread_loaf.name=ローフブレッド (#morefood)
+item.breakfast_sub.name=ブレークファストサブ (#morefood)
+item.burger_bun.name=ハンバーガーのバンズ (#morefood)
+item.burrito.name=ブリトー (#morefood)
+item.butter.name=バター (#morefood)
+item.cappuccino.name=カプチーノ (#morefood)
+item.cereal.name=シリアル (#morefood)
+item.cheese_bucket.name=チーズバケツ (#morefood)
+item.cheese_toastie.name=グリルドチーズ (#morefood)
+item.cheese_wedge.name=チーズウェッジ (#morefood)
+item.chicken_fajita.name=チキンファヒータ (#morefood)
+item.chicken_select.name=チキンセレクト (#morefood)
+item.chicken_sub.name=チキンサブ (#morefood)
+item.coconut_meat.name=ココナッツの実 (#morefood)
+item.coconut_milk.name=ココナッツミルク (#morefood)
+item.cooked_bacon.name=調理したベーコン (#morefood)
+item.cooked_bat_meat.name=調理したコウモリの肉 (#morefood)
+item.cooked_hotdog_sausage.name=調理したホットドッグソーセージ (#morefood)
+item.cooked_sausage.name=調理したソーセージ (#morefood)
+item.cornflour.name=コーンフラワー (#morefood)
+item.cream_carton.name=クリームカートン (#morefood)
+item.custard.name=カスタード (#morefood)
+item.cut_bread.name=カットしたパン (#morefood)
+item.cut_fries.name=カットしたフライドポテト (#morefood)
+item.dark_chocolate.name=ダークチョコレート (#morefood)
+item.dough.name=生地 (#morefood)
+item.flour.name=小麦粉 (#morefood)
+item.fried_egg.name=目玉焼き (#morefood)
+item.fried_squid.name=調理したイカ (#morefood)
+item.fries.name=フライドポテト (#morefood)
+item.gelatin.name=ゼラチン (#morefood)
+item.hamburger.name=ハンバーガー (#morefood)
+item.hamburger_patty.name=ハンバーガーのパティ (#morefood)
+item.hops.name=ホップ (#morefood)
+item.hot_cocoa.name=ホットココア (#morefood)
+item.hot_coffee.name=ホットコーヒー (#morefood)
+item.hot_tea.name=温かい茶 (#morefood)
+item.hotdog.name=ホットドッグ (#morefood)
+item.hotdog_bun.name=ホットドッグのバンズ (#morefood)
+item.hotdog_sausage.name=ホットドッグのソーセージ (#morefood)
+item.ice_bowl.name=アイスボウル (#morefood)
+item.jam.name=ジャム (#morefood)
+item.jelly_sandwich.name=ゼリーサンドイッチ (#morefood)
+item.kebab.name=ケバブ (#morefood)
+item.macchiato.name=マキアート (#morefood)
+item.milk_carton.name=ミルクカートン (#morefood)
+item.milk_chocolate.name=ミルクチョコレート (#morefood)
+item.mocha.name=モカ (#morefood)
+item.muffin_bun.name=マフィンのバンズ (#morefood)
+item.noodles.name=麺 (#morefood)
+item.oil.name=食用油 (#morefood)
+item.orange_jelly.name=オレンジゼリー (#morefood)
+item.pancakes.name=パンケーキ (#morefood)
+item.pasta.name=パスタ (#morefood)
+item.pink_cupcake.name=ピンクのパンケーキ (#morefood)
+item.pitta_bread.name=ピタパン (#morefood)
+item.pizza.name=ピザ (#morefood)
+item.pizza_base.name=ピザ生地 (#morefood)
+item.pizza_slice.name=ピザ片 (#morefood)
+item.popcorn.name=ポップコーン (#morefood)
+item.popcorn_bucket.name=ポップコーンバケツ (#morefood)
+item.ramen_noodles.name=ラーメン (#morefood)
+item.raw_hamburger_patty.name=生のハンバーガーのパティ (#morefood)
+item.raw_sausage.name=生のソーセージ (#morefood)
+item.raw_squid.name=生のイカ (#morefood)
+item.raw_veganburger_patty.name=生のビーガンバーガーのパティ (#morefood)
+item.raw_wedges.name=生のウェッジ (#morefood)
+item.rice.name=米 (#morefood)
+item.rice_pudding.name=ミルク粥 (#morefood)
+item.round_cheese.name=丸いチーズ (#morefood)
+item.salt.name=食塩 (#morefood)
+item.sausage_egg_muffin.name=ソーセージエッグマフィン (#morefood)
+item.sausage_egg_sandwich.name=ソーセージエッグサンドイッチ (#morefood)
+item.sparkling_water_bucket.name=炭酸水バケツ (#morefood)
+item.strawberry_jelly.name=イチゴジャム (#morefood)
+item.sub_bun.name=サブバンズ (#morefood)
+item.sushi.name=寿司 (#morefood)
+item.taco.name=タコス (#morefood)
+item.tea_leaves.name=茶葉 (#morefood)
+item.toast.name=トースト (#morefood)
+item.toffee.name=タフィー (#morefood)
+item.toffee_latte.name=トフィラテ (#morefood)
+item.tomato_puree.name=トマトピューレ (#morefood)
+item.tortilla.name=トルティーヤ (#morefood)
+item.turkish_delight.name=ロクム (#morefood)
+item.vanilla_extract.name=バニラエッセンス (#morefood)
+item.vanilla_latte.name=バニララテ (#morefood)
+item.vanilla_pod.name=バニラビーンズ (#morefood)
+item.veganburger.name=ビーガンバーガー (#morefood)
+item.veganburger_patty.name=ビーガンバーガーのパティ (#morefood)
+item.waffle.name=ワッフル (#morefood)
+item.wedges_pot.name=ウェッジポット (#morefood)
+item.white_chocolate.name=ホワイトチョコレート (#morefood)
+item.yeast.name=酵母 (#morefood)
 
 # Alchohol
 item.beer.name=Beer (#morefood)
