[RP][ja_JP.lang]Translate 'Alchohol' section

--- a/Lots More Food Addon/MoreFoodRP/texts/ja_JP.lang
+++ b/Lots More Food Addon/MoreFoodRP/texts/ja_JP.lang
@@ -196,32 +196,32 @@ item.white_chocolate.name=ホワイトチョコレート (#morefood)
 item.yeast.name=酵母 (#morefood)
 
 # Alchohol
-item.beer.name=Beer (#morefood)
-item.cider.name=Cider (#morefood)
-item.red_wine.name=Red Wine (#morefood)
-item.white_wine.name=White Wine (#morefood)
+item.beer.name=ビール (#morefood)
+item.cider.name=リンゴ酒 (#morefood)
+item.red_wine.name=赤ワイン (#morefood)
+item.white_wine.name=白ワイン (#morefood)
 
-item.bottled_beer.name=Beer Bottle 100% (#morefood)
-item.bottled_cider.name=Cider Bottle 100% (#morefood)
-item.bottled_red_wine.name=Red Wine Bottle 100% (#morefood)
-item.bottled_white_wine.name=White Wine Bottle 100% (#morefood)
+item.bottled_beer.name=ビールボトル(100%) (#morefood)
+item.bottled_cider.name=リンゴ酒ボトル(100%) (#morefood)
+item.bottled_red_wine.name=赤ワインボトル(100%) (#morefood)
+item.bottled_white_wine.name=白ワインボトル(100%) (#morefood)
 
-item.bottled_beer_75.name=Beer Bottle 75% (#morefood)
-item.bottled_cider_75.name=Cider Bottle 75% (#morefood)
-item.bottled_red_wine_75.name=Red Wine Bottle 75% (#morefood)
-item.bottled_white_wine_75.name=White Wine Bottle 75% (#morefood)
-item.bottled_beer_50.name=Beer Bottle 50% (#morefood)
-item.bottled_cider_50.name=Cider Bottle 50% (#morefood)
-item.bottled_red_wine_50.name=Red Wine Bottle 50% (#morefood)
-item.bottled_white_wine_50.name=White Wine Bottle 50% (#morefood)
-item.bottled_beer_25.name=Beer Bottle 25% (#morefood)
-item.bottled_cider_25.name=Cider Bottle 25% (#morefood)
-item.bottled_red_wine_25.name=Red Wine Bottle 25% (#morefood)
-item.bottled_white_wine_25.name=White Wine Bottle 25% (#morefood)
-item.bottled_beer_0.name=Beer Bottle 0% (#morefood)
-item.bottled_cider_0.name=Cider Bottle 0% (#morefood)
-item.bottled_red_wine_0.name=Red Wine Bottle 0% (#morefood)
-item.bottled_white_wine_0.name=White Wine Bottle 0% (#morefood)
+item.bottled_beer_75.name=ビールボトル(75%) (#morefood)
+item.bottled_cider_75.name=リンゴ酒ボトル(75%) (#morefood)
+item.bottled_red_wine_75.name=赤ワインボトル(75%) (#morefood)
+item.bottled_white_wine_75.name=白ワインボトル(75%) (#morefood)
+item.bottled_beer_50.name=ビールボトル(50%) (#morefood)
+item.bottled_cider_50.name=リンゴ酒ボトル(50%) (#morefood)
+item.bottled_red_wine_50.name=赤ワインボトル(50%) (#morefood)
+item.bottled_white_wine_50.name=白ワインボトル(50%) (#morefood)
+item.bottled_beer_25.name=ビールボトル(25%) (#morefood)
+item.bottled_cider_25.name=リンゴ酒ボトル(25%) (#morefood)
+item.bottled_red_wine_25.name=赤ワインボトル(25%) (#morefood)
+item.bottled_white_wine_25.name=白ワインボトル(25%) (#morefood)
+item.bottled_beer_0.name=ビールボトル(0%) (#morefood)
+item.bottled_cider_0.name=リンゴ酒ボトル(0%) (#morefood)
+item.bottled_red_wine_0.name=赤ワインボトル(0%) (#morefood)
+item.bottled_white_wine_0.name=白ワインボトル(0%) (#morefood)
 
 # Donut
 item.donut_chocolate.name=Chocolate Donut (#morefood)
