[RP][ja_JP.lang]Translate 'Fruit' section

--- a/Lots More Food Addon/MoreFoodRP/texts/ja_JP.lang
+++ b/Lots More Food Addon/MoreFoodRP/texts/ja_JP.lang
@@ -234,15 +234,15 @@ item.donut_strawberry.name=ストロベリードーナツ (#morefood)
 item.donut_toffee.name=タフィドーナツ (#morefood)
 
 # Fruit
-item.banana.name=Banana (#morefood)
-item.grape.name=Grape (#morefood)
-item.lemon.name=Lemon (#morefood)
-item.olives.name=Olives (#morefood)
-item.orange.name=Orange (#morefood)
-item.plum.name=Plum (#morefood)
-item.raspberry.name=Raspberry (#morefood)
-item.strawberry.name=Strawberry (#morefood)
-item.tomato.name=Tomato (#morefood)
+item.banana.name=バナナ (#morefood)
+item.grape.name=グレープ (#morefood)
+item.lemon.name=レモン (#morefood)
+item.olives.name=オリーブ (#morefood)
+item.orange.name=オレンジ (#morefood)
+item.plum.name=パルム (#morefood)
+item.raspberry.name=ラズベリー (#morefood)
+item.strawberry.name=イチゴ (#morefood)
+item.tomato.name=トマト (#morefood)
 
 # Icecream
 item.ice_bowl.name=Ice Cream Bowl (#morefood)
