[RP][ja_JP.lang]Translate 'Icecrush' section

--- a/Lots More Food Addon/MoreFoodRP/texts/ja_JP.lang
+++ b/Lots More Food Addon/MoreFoodRP/texts/ja_JP.lang
@@ -254,16 +254,16 @@ item.icecream_toffee.name=トフィ―アイスクリーム (#morefood)
 item.icecream_vanilla.name=バニラアイスクリーム (#morefood)
 
 # Icecrush
-item.icecrush_apple.name=Apple Ice Crush (#morefood)
-item.icecrush_apple_raspberry.name=Apple Raspberry Ice Crush (#morefood)
-item.icecrush_icecrush_berry.name=Berry Ice Crush (#morefood)
-item.icecrush_berry.name=Berry Ice Crush (#morefood)
-item.icecrush_grape.name=Grape Ice Crush (#morefood)
-item.icecrush_lemon.name=Lemon Ice Crush (#morefood)
-item.icecrush_melon.name=Melon Ice Crush (#morefood)
-item.icecrush_mixed_fruit.name=Mixed Fruit Ice Crush (#morefood)
-item.icecrush_orange.name=Orange Ice Crush (#morefood)
-item.icecrush_strawberry.name=Strawberry Ice Crush (#morefood)
+item.icecrush_apple.name=アイスクラッシュ(リンゴ) (#morefood)
+item.icecrush_apple_raspberry.name=アイスクラッシュ(リンゴとラズベリー) (#morefood)
+item.icecrush_icecrush_berry.name=アイスクラッシュ(ベリー) (#morefood)
+item.icecrush_berry.name=アイスクラッシュ(ベリー) (#morefood)
+item.icecrush_grape.name=アイスクラッシュ(グレープ) (#morefood)
+item.icecrush_lemon.name=アイスクラッシュ(レモン) (#morefood)
+item.icecrush_melon.name=アイスクラッシュ(メロン) (#morefood)
+item.icecrush_mixed_fruit.name=アイスクラッシュ(ミックスフルーツ) (#morefood)
+item.icecrush_orange.name=アイスクラッシュ(オレンジ) (#morefood)
+item.icecrush_strawberry.name=アイスクラッシュ(イチゴ) (#morefood)
 
 # Juice
 item.juice_apple.name=Apple Juice (#morefood)
