[RP][ja_JP.lang]Translate 'Juice' section

--- a/Lots More Food Addon/MoreFoodRP/texts/ja_JP.lang
+++ b/Lots More Food Addon/MoreFoodRP/texts/ja_JP.lang
@@ -266,15 +266,15 @@ item.icecrush_orange.name=アイスクラッシュ(オレンジ) (#morefood)
 item.icecrush_strawberry.name=アイスクラッシュ(イチゴ) (#morefood)
 
 # Juice
-item.juice_apple.name=Apple Juice (#morefood)
-item.juice_berry.name=Berry Juice (#morefood)
-item.juice_grape.name=Grape Juice (#morefood)
-item.juice_lemon.name=Lemon Juice (#morefood)
-item.juice_melon.name=Melon Juice (#morefood)
-item.juice_mixed_fruit.name=Mixed Fruit Juice (#morefood)
-item.juice_orange.name=Orange Juice (#morefood)
-item.juice_strawberry.name=Strawberry Juice (#morefood)
-item.juice_tomato.name=Tomato Juice (#morefood)
+item.juice_apple.name=リンゴジュース (#morefood)
+item.juice_berry.name=ベリージュース (#morefood)
+item.juice_grape.name=グレープジュース (#morefood)
+item.juice_lemon.name=レモンジュース (#morefood)
+item.juice_melon.name=メロンジュース (#morefood)
+item.juice_mixed_fruit.name=ミックスフルーツジュース (#morefood)
+item.juice_orange.name=オレンジジュース (#morefood)
+item.juice_strawberry.name=ストロベリージュース (#morefood)
+item.juice_tomato.name=トマトジュース (#morefood)
 
 # Milkshake
 item.milkshake_banana.name=Banana Milkshake (#morefood)
