[RP][ja_JP.lang]Translate 'Pie' section

--- a/Lots More Food Addon/MoreFoodRP/texts/ja_JP.lang
+++ b/Lots More Food Addon/MoreFoodRP/texts/ja_JP.lang
@@ -282,20 +282,20 @@ item.milkshake_chocolate.name=チョコレートミルクセーキ (#morefood)
 item.milkshake_strawberry.name=イチゴミルクセーキ (#morefood)
 
 # Pie
-item.pie_apple.name=Apple Pie (#morefood)
-item.pie_apple_raspberry.name=Apple Raspberry Pie (#morefood)
-item.pie_base.name=Pie Base (#morefood)
-item.pie_berry.name=Berry Pie (#morefood)
-item.pie_cheese.name=Cheese Pie (#morefood)
-item.pie_chicken.name=Chicken Pie (#morefood)
-item.pie_chocolate.name=Chocolate Pie (#morefood)
-item.pie_golden_apple.name=Golden Apple Pie (#morefood)
-item.pie_lemon.name=Lemon Pie (#morefood)
-item.pie_plum.name=Plum Pie (#morefood)
-item.pie_pork.name=Pork Pie (#morefood)
-item.pie_steak.name=Steak Pie (#morefood)
-item.pie_strawberry.name=Strawberry Pie (#morefood)
-item.pie_toffee.name=Toffee Pie (#morefood)
+item.pie_apple.name=アップルパイ (#morefood)
+item.pie_apple_raspberry.name=アップルラズベリーパイ (#morefood)
+item.pie_base.name=パイ生地 (#morefood)
+item.pie_berry.name=ベリーパイ (#morefood)
+item.pie_cheese.name=チーズパイ (#morefood)
+item.pie_chicken.name=チキンパイ (#morefood)
+item.pie_chocolate.name=チョコパイ (#morefood)
+item.pie_golden_apple.name=金のアップルパイ (#morefood)
+item.pie_lemon.name=レモンパイ (#morefood)
+item.pie_plum.name=プラムパイ (#morefood)
+item.pie_pork.name=ポークパイ (#morefood)
+item.pie_steak.name=ステーキパイ (#morefood)
+item.pie_strawberry.name=ストロベリーパイ (#morefood)
+item.pie_toffee.name=タフィーパイ (#morefood)
 
 # Smoothie
 item.smoothie_banana.name=Banana Smoothie (#morefood)
