[RP][ja_JP.lang]Translate 'Items' section

--- a/Lots More Food Addon/MoreFoodRP/texts/ja_JP.lang
+++ b/Lots More Food Addon/MoreFoodRP/texts/ja_JP.lang
@@ -321,26 +321,26 @@ item.onion.name=たまねぎ (#morefood)
 item.pickles.name=ピクルス (#morefood)
 
 # Items
-item.sub_wrapper.name=Sub Wrapper (#morefood)
-item.beer_glass.name=Beer Glass (#morefood)
-item.beverage_cup.name=Beverage Cup (#morefood)
-item.bottle.name=Bottle (#morefood)
-item.carton.name=Carton (#morefood)
-item.chicken_select_box.name=Chicken Select Box (#morefood)
-item.cream_carton.name=Cream Carton (#morefood)
-item.empty_icecrush_glass.name=Empty Icecrush Glass (#morefood)
-item.empty_popcorn_bucket.name=Empty Popcorn Bucket (#morefood)
-item.empty_tumbler_glass.name=Empty Tumbler Glass (#morefood)
-item.empty_wedges_pot.name=Empty Wedges Pot (#morefood)
-item.fry_wrapper.name=Fry Wrapper (#morefood)
-item.hot_beverage_cup.name=Hot Beverage Cup (#morefood)
-item.icing.name=Icing (#morefood)
-item.jar.name=Jar (#morefood)
-item.pizza_box_opened.name=Pizza Box Opened (#morefood)
-item.recipe_book.name=Recipe Book (#morefood)
-item.soda_can_empty.name=Soda Can Empty (#morefood)
-item.starch.name=Starch (#morefood)
-item.wine_glass.name=Wine Glass (#morefood)
+item.sub_wrapper.name=サブラッピング (#morefood)
+item.beer_glass.name=ビールグラス (#morefood)
+item.beverage_cup.name=飲料カップ (#morefood)
+item.bottle.name=ボトル (#morefood)
+item.carton.name=カートン (#morefood)
+item.chicken_select_box.name=チキンセレクトボックス (#morefood)
+item.cream_carton.name=クリームカートン (#morefood)
+item.empty_icecrush_glass.name=空のアイスクラッシュグラス (#morefood)
+item.empty_popcorn_bucket.name=空のポップコーンバケツ (#morefood)
+item.empty_tumbler_glass.name=型のタンブラーグラス (#morefood)
+item.empty_wedges_pot.name=空のウェッジポット (#morefood)
+item.fry_wrapper.name=フライラッピング (#morefood)
+item.hot_beverage_cup.name=ホット飲料カップ (#morefood)
+item.icing.name=アイシング (#morefood)
+item.jar.name=ジャー (#morefood)
+item.pizza_box_opened.name=開いたピザボックス (#morefood)
+item.recipe_book.name=レシピ本 (#morefood)
+item.soda_can_empty.name=空のソーダ缶 (#morefood)
+item.starch.name=スターチ (#morefood)
+item.wine_glass.name=ワイングラス (#morefood)
 
 # moreplants
 item.spawn_egg.entity.moreplant:tree_apple.name=Apple Sapling (#morefood)
